# dc

./: .env.example  .gitignore  CLAUDE.md  README.md  init_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  test_auto_execution.py  test_log_cleanup.py  test_scheduler_logs.py  test_task_execution.py  todo.md
.claude/commands/address-crawler/: task-1.md  task-10.md  task-11.md  task-12.md  task-13.md  task-14.md  task-15.md  task-16.md  task-17.md  task-19.md  task-2.md  task-20.md  task-21.md  task-22.md  task-23.md  task-24.md  task-25.md  task-26.md  task-27.md  task-28.md  task-29.md  task-3.md  task-30.md  task-31.md  task-32.md  task-33.md  task-34.md  task-35.md  task-36.md  task-37.md  task-4.md  task-5.md  task-6.md  task-7.md  task-8.md  task-9.md
.claude/specs/address-crawler/: design.md  requirements.md  tasks.md
.claude/steering/: product.md  structure.md  tech.md
scripts/: init_db.py
src/: app.py  config.py  main.py
src/models/: __init__.py  address_info.py  task.py
src/scheduler/: __init__.py  task_scheduler.py
src/services/: __init__.py  crawler_service.py  data_service.py  task_service.py  validation_service.py
src/utils/: database.py  log_cleanup.py  logger.py
tasks/: task_16_completed.md  todo.md
tests/: conftest.py  test_address_model.py  test_crawler_service.py  test_data_service.py  test_scheduler.py  test_task_model.py  test_task_service.py  test_workflow.py  utils.py
